# ocrmypdf-paddleocr

./: README.md  pyproject.toml
src/ocrmypdf_paddleocr/: __init__.py  engine.py  lang_map.py
tests/: conftest.py  test_accuracy.py  test_engine.py  test_integration.py
tests/resources/: SOURCES
