[project]
name = "ocrmypdf-paddleocr"
version = "0.1.0"
description = "PaddleOCR engine plugin for OCRmyPDF"
license = { text = "MPL-2.0" }
requires-python = ">=3.11"
dependencies = [
    "ocrmypdf>=17.0",
    "paddleocr>=3.0.0,<3.3.0",
    "paddlepaddle>=3.0.0,<3.3.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.4"]
test = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ocrmypdf_paddleocr"]
